# the-terra-project

./: Cargo.toml
assets/shaders/: basic.wgsl  unlit.wgsl
crates/app/: Cargo.toml
crates/app/src/: events.rs  frame.rs  handler.rs  input.rs  lib.rs  scene.rs  window_extension.rs
crates/render/: Cargo.toml
crates/render/src/: dir_light.rs  error.rs  frame.rs  lib.rs  light.rs  material.rs  projection.rs  shader_tex.rs  texture.rs  uniform.rs  util.rs  vertex.rs
crates/render/src/mesh/: builder.rs  mod.rs
crates/render/src/renderer/: builder.rs  mod.rs
crates/world/: Cargo.toml
crates/world/src/: chunk.rs  lib.rs  tile.rs  world.rs
src/: events.rs  input.rs  main.rs  material.rs  mesh.rs  prelude.rs  render.rs  scene.rs  time.rs  uniform.rs  window.rs
src/app/: app_handler.rs  frame.rs  handler.rs  mod.rs
src/mesh/: builder.rs  render.rs
src/render/: builder.rs  camera.rs  mod.rs  vertex.rs
