[package]
name = "terra-project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
futures = "0.3.30"
image = "0.25.2"
log = "0.4.22"
rhai = { version = "1.19.0", features = ["serde", "sync"] }
serde = { version = "1.0.205", features = ["derive"] }
thiserror = "1.0.63"
wgpu = "22.1.0"
winit = "0.30.5"

[profile.dev.package."*"]
opt-level = 3
