[package]
name = "terra-project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.3", features = ["derive"] }
encase = { version = "0.9.0", features = ["glam"] }
env_logger = "0.11.5"
futures = "0.3.30"
glam = { version = "0.28.0", features = ["bytemuck", "serde"] }
image = "0.25.2"
log = "0.4.22"
rhai = { version = "1.19.0", features = ["serde", "sync"] }
serde = { version = "1.0.205", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"
wgpu = { version = "22.1.0", features = ["serde"] }
winit = { version = "0.30.5", features = ["serde"] }

[profile.dev.package."*"]
opt-level = 3
