[package]
name = "terra-project"
version.workspace = true
edition.workspace = true

[[bin]]
name = "terra-project"
path = "src/main.rs"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
log = "0.4.22"
glam = { version = "0.28.0", features = ["bytemuck", "serde"] }
wgpu = { version = "22.1.0", features = ["serde"] }
winit = { version = "0.30.5", features = ["serde"] }
bytemuck = { version = "1.16.3", features = ["derive"] }
thiserror = "1.0.63"
futures = "0.3.30"
env_logger = "0.11.5"
rhai = { version = "1.19.0", features = ["serde", "sync"] }

serde = { version = "1.0.205", features = ["derive"] }
toml = "0.8.19"

image = "0.25.2"

render = { path = "crates/render" }
app = { path = "crates/app" }

[dependencies]
render = { workspace = true }
app = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

[profile.dev.package."*"]
opt-level = 3
